objects/TCObj1__c.object
<CustomObject>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NewField1__c</fullName>
        <description>Test</description>
        <label>NewField1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC1__c</fullName>
        <label>PC1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TCObj1</label>
    <nameField>
        <label>TCObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>